--- a/meadows/001.md
+++ b/meadows/001.md
@@ -1,3 +1,8 @@
-## A New Post
+# Meadows
 
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+_This one hits home... To a time of foolishness and carelessness. Then again, that's probably why, today, I can look back and **smile**_
+
+## Chapter 1
+
+
+
