--- a/meadows/001.md
+++ b/meadows/001.md
@@ -4,5 +4,9 @@ _This one hits home... To a time of foolishness and carelessness. Then again, th
 
 ## Chapter 1
 
+Wise men say, _what's done is done_. It's a logical conclusion. But more often that not, I keep thinking to my past, asking the same stupid question from a ridiculously idiotic [movie](http://www.imdb.com/title/tt0265208/), was the juice really worth the squeeze ? 
+
+This story starts about 6 years back when the Bin Laden was killed and Steve Jobs died. A lot of us rejoiced at the first news and mourned the later. But I couldn't give too shits about either of them. For me, all I could think of was how I can put my dick in something. 
+
 
 
