--- a/meadows/001.md
+++ b/meadows/001.md
@@ -2,11 +2,14 @@
 
 _This one hits home... To a time of foolishness and carelessness. Then again, that's probably why, today, I can look back and **smile**_
 
+## Prologue
+
+Wise men say, _what's done is done_. It's a logical conclusion. But more often that not, I keep thinking to my past, asking the same stupid question from a ridiculously idiotic [movie](http://www.imdb.com/title/tt0265208/), was the juice really worth the squeeze ? This story starts about 6 years back when the Bin Laden was killed and Steve Jobs died. A lot of us rejoiced at the first news and mourned the later. But I couldn't give too shits about either of them. For me, all I could think of was how I can put my dick in something. I was 16 and horny. And so was, pretty much everyone in my grade. The ones who could land a girl, where going at it like a horndogs with pillows. And the others, not so well. As you probably guess it I fell into the later.
+
+
 ## Chapter 1
 
-Wise men say, _what's done is done_. It's a logical conclusion. But more often that not, I keep thinking to my past, asking the same stupid question from a ridiculously idiotic [movie](http://www.imdb.com/title/tt0265208/), was the juice really worth the squeeze ? 
-
-This story starts about 6 years back when the Bin Laden was killed and Steve Jobs died. A lot of us rejoiced at the first news and mourned the later. But I couldn't give too shits about either of them. For me, all I could think of was how I can put my dick in something. I was 16 and horny. And so were, pretty much everyone in my grade. The ones who could land a girl, where going at it like a horndogs with pillows. And the others, not so well. You could say
-
+'Hey David', someone called out.
+David turned around, to find his friend Chris sprint towards him, clutching what looks like paperplate.
 
 
