--- a/meadows/001.md
+++ b/meadows/001.md
@@ -10,4 +10,8 @@ Wise men say, _what's done is done_. It's a logical conclusion. But more often t
 ## Chapter 1
 
 '_Hey David_', someone called out.
-David turned around, to find his friend Chris sprint towards him, clutching what looks like paperplate. He reaches David and starts panting and mumbling incoherently about it being the best day of his life. On the whole, david couldn't understand much other than that his friend was happy. David tells him "_Dude, chill. Let's walk. By the time I reach my ride, you'll start talking in English and then you can tell me._". David thinks to himself "_Who am I kidding, this guy won't be able to wait that long._", and like clockwork Chris starts explaining how he got the number of a girl named Anita from our class on the paperplate and she agreed to go out with him. David stops walking, turns to him and asks him, "_Anita, the hot chick from our class with the insane rack and boderline crazy guts ? You asked her out and she said yes ? I dont believe it._". Chris gets defensive and starts ranting, gist of which was that he asked for her number and she gave it saying he should call her if all of us were hanging out as group. David keeps dismissiging him saying its nothing, but Chris is insistant that he'll score this time. 
+David turned around, to find his friend Chris sprint towards him, clutching what looks like paperplate. He reaches David and starts panting and mumbling incoherently about it being the best day of his life. On the whole, david couldn't understand much other than that his friend was happy. David tells him "_Dude, chill. Let's walk. By the time I reach my ride, you'll start talking in English and then you can tell me._". David thinks to himself "_Who am I kidding, this guy won't be able to wait that long._", and like clockwork Chris starts explaining how he got the number of a girl named Anita from our class on the paperplate and she agreed to go out with him. David stops walking, turns to him and asks him, "_Anita, the hot chick from our class with the insane rack and boderline crazy guts ? You asked her out and she said yes ? I dont believe it._". Chris gets defensive and starts ranting, gist of which was that he asked for her number and she gave it saying he should call her if all of us were hanging out as a group. David keeps dismissiging him saying its nothing, but Chris is insistant that he'll score this time. "_We'll see_" David thinks to himself. In a David was not to hapy about the whole thing considering his faliures, but he was happy for his friend if it was genuinely something.
+
+## Chapter 2
+
+Two weeks have passed and Chris was going well with Anita. Well, as well as he could go considering the all the talk was over text. "_**Texting, in shorthand**_",
