--- a/meadows/001.md
+++ b/meadows/001.md
@@ -14,4 +14,4 @@ David turned around, to find his friend Chris sprint towards him, clutching what
 
 ## Chapter 2
 
-Two weeks have passed and Chris was going well with Anita. Well, as well as he could go considering the all the talk was over text. "_**Texting, in shorthand**_",
+Two weeks have passed and Chris was going well with Anita. Well, as well as he could go considering the all the talk was over text. "_**Texting ?** in shorthand ?**_ Really ?** Have I taught you nothing ?" David asks Chris. David was the kind that would cringe at someone writing 2 instead of to.
